src/include/xmmsc/xmmsv_coll.h

typedef xmmsv_t xmmsv_coll_t XMMS_DEPRECATED;
void xmmsv_coll_set_idlist (xmmsv_t *coll, int ids[]) XMMS_PUBLIC;
void xmmsv_coll_add_operand (xmmsv_t *coll, xmmsv_t *op) XMMS_PUBLIC;
void xmmsv_coll_remove_operand (xmmsv_t *coll, xmmsv_t *op) XMMS_PUBLIC;
xmmsv_t *xmmsv_coll_operands_get (xmmsv_t *coll) XMMS_PUBLIC;
int xmmsv_coll_idlist_append (xmmsv_t *coll, int64_t id) XMMS_PUBLIC;
int xmmsv_coll_idlist_insert (xmmsv_t *coll, int index, int64_t id) XMMS_PUBLIC;
int xmmsv_coll_idlist_move (xmmsv_t *coll, int index, int newindex) XMMS_PUBLIC;
int xmmsv_coll_idlist_remove (xmmsv_t *coll, int index) XMMS_PUBLIC;
int xmmsv_coll_idlist_clear (xmmsv_t *coll) XMMS_PUBLIC;
int xmmsv_coll_idlist_set_index (xmmsv_t *coll, int index, int64_t val) XMMS_PUBLIC;
int xmmsv_coll_idlist_get_size (xmmsv_t *coll) XMMS_PUBLIC;
int xmmsv_coll_is_type (xmmsv_t *val, xmmsv_coll_type_t t) XMMS_PUBLIC;
xmmsv_coll_type_t xmmsv_coll_get_type (xmmsv_t *coll) XMMS_PUBLIC;
xmmsv_t *xmmsv_coll_idlist_get (xmmsv_t *coll) XMMS_PUBLIC;
void xmmsv_coll_attribute_set_string (xmmsv_t *coll, const char *key, const char *value) XMMS_PUBLIC;
void xmmsv_coll_attribute_set_int (xmmsv_t *coll, const char *key, int64_t value) XMMS_PUBLIC;
void xmmsv_coll_attribute_set_value (xmmsv_t *coll, const char *key, xmmsv_t *value) XMMS_PUBLIC;
int xmmsv_coll_attribute_remove (xmmsv_t *coll, const char *key) XMMS_PUBLIC;
int xmmsv_coll_attribute_get_string (xmmsv_t *coll, const char *key, const char **value) XMMS_PUBLIC;
int xmmsv_coll_attribute_get_value (xmmsv_t *coll, const char *key, xmmsv_t **value) XMMS_PUBLIC;
xmmsv_t *xmmsv_coll_attributes_get (xmmsv_t *coll) XMMS_PUBLIC;
void xmmsv_coll_attributes_set (xmmsv_t *coll, xmmsv_t *attributes) XMMS_PUBLIC;
xmmsv_t *xmmsv_coll_universe (void) XMMS_PUBLIC XMMS_DEPRECATED;
xmmsv_t *xmmsv_coll_add_order_operator (xmmsv_t *coll, xmmsv_t *order) XMMS_PUBLIC;
xmmsv_t *xmmsv_coll_add_order_operators (xmmsv_t *coll, xmmsv_t *order) XMMS_PUBLIC;
xmmsv_t *xmmsv_coll_add_limit_operator (xmmsv_t *coll, int lim_start, int lim_len) XMMS_PUBLIC;
#define xmmsv_coll_idlist_get_index xmmsv_coll_idlist_get_index_int64
#define xmmsv_coll_attribute_get_int xmmsv_coll_attribute_get_int64
#define xmmsv_coll_idlist_get_index xmmsv_coll_idlist_get_index_int32
#define xmmsv_coll_attribute_get_int xmmsv_coll_attribute_get_int32