src/include/xmmsc/xmmsv_list.h

/**
 * @defgroup ListType Lists
 * @ingroup ValueType
 * @{
 */

typedef int (*xmmsv_list_compare_func_t)(xmmsv_t **, xmmsv_t **);
int xmmsv_list_has_type (xmmsv_t *listv, xmmsv_type_t type) XMMS_PUBLIC;
xmmsv_t *xmmsv_list_flatten (xmmsv_t *list, int depth) XMMS_PUBLIC;
typedef struct xmmsv_list_iter_St xmmsv_list_iter_t;
int  xmmsv_list_iter_set (xmmsv_list_iter_t *it, xmmsv_t *val) XMMS_PUBLIC;